infrastructure/security-groups.tf
# ALB Security Group
resource "aws_security_group" "alb" {
  name        = "${var.environment_name}-load-balancer-security-group"
  description = "controls access to the ALB"
  vpc_id      = module.vpc.vpc_id

  ingress {
    protocol    = "tcp"
    from_port   = 80
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    protocol    = "tcp"
    from_port   = 443
    to_port     = 443
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Environment = var.environment_name
  }
}

# Traffic to the ECS cluster should only come from the ALB
resource "aws_security_group" "unrestricted" {
  name        = "${var.environment_name}-unrestricted-security-group"
  description = "allow all inbound / outbound access"
  vpc_id      = module.vpc.vpc_id

  ingress {
    protocol        = "-1"
    from_port       = 0
    to_port         = 0
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Environment = var.environment_name
  }
}

# Traffic to the ECS cluster should only come from the ALB
resource "aws_security_group" "ecs_task" {
  name        = "${var.environment_name}-ecs-task-security-group"
  description = "allow inbound access from the ALB only"
  vpc_id      = module.vpc.vpc_id

  ingress {
    protocol        = "tcp"
    from_port       = var.app_port
    to_port         = var.app_port
    security_groups = [aws_security_group.alb.id]
  }

  egress {
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Environment = var.environment_name
  }
}


# Traffic to the RDS Aurora/MySQL cluster should only come from the ECS tasks
resource "aws_security_group" "database" {
  name        = "${var.environment_name}-rds-security-group"
  description = "allow inbound access from ECS tasks only"
  vpc_id      = module.vpc.vpc_id

  ingress {
    protocol        = "tcp"
    from_port       = 3306
    to_port         = 3306
    security_groups = [aws_security_group.ecs_task.id]
  }

  egress {
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Environment = var.environment_name
  }
}
